--- a/score counter/index.html
+++ b/score counter/index.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div id="away">
-                    <h3 class="title">GUEST</h3>
+                    <h3 class="title">AWAY</h3>
                     <h1 id="guest-team-score">0</h1>
                     <div class="add-btn-section">
                         <button class="add-btn" id="guest-add1">+1</button>
